feat: good spell search & good spell desc rendering